syntax = "proto3";

option go_package = "./../message";
import "message_id.proto";
import "game/player.proto";

// C2S 100--200
// S2C 200--300
enum LoginType {
    None = 0;
    DouYin = 1;
    WeChat = 2;
}

message S2C_Login {
    option (message_id) = 201;
    int32 login_result = 1; // 为0登录成功，其他都登录失败
    PlayerInfo playerInfo = 2;
}

// client -> server -> toDouyinCheck
message C2S_Login {
    option (message_id) = 101;
    LoginType login_type = 1;
    int32 server_id = 2;
    string code = 3;
}

message C2S_Heart {
    option (message_id) = 102;
}

message S2C_Heart {
    option (message_id) = 202;
}